--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -3,8 +3,10 @@ compileSdk = "34"
 targetSdk = "34"
 minSdk = "26"
 agp = "8.2.2"
-kotlin = "1.9.0"
-composeCompilerVersion = "1.5.1"
+kotlin = "1.9.22"
+ksp = "1.9.0-1.0.12"
+daggerHiltAndroid = "2.50"
+composeCompilerVersion = "1.5.9"
 androidxCoreKtx = "1.12.0"
 androidxTestExtJunit = "1.1.5"
 androidxTestEspressoCore = "3.5.1"
@@ -13,6 +15,7 @@ androidxActivityCompose = "1.8.2"
 androidxComposeBom = "2024.02.00"
 androidxAppcompat = "1.6.1"
 androidxNavigation = "2.7.7"
+androidxHiltNavigationCompose = "1.1.0"
 junit = "4.13.2"
 
 [libraries]
@@ -30,10 +33,15 @@ androidx-compose-ui-test-manifest = { group = "androidx.compose.ui", name = "ui-
 androidx-compose-ui-test-junit4 = { group = "androidx.compose.ui", name = "ui-test-junit4" }
 androidx-compose-material3 = { group = "androidx.compose.material3", name = "material3" }
 androidx-navigation-compose = { group = "androidx.navigation", name = "navigation-compose", version.ref = "androidxNavigation" }
+androidx-hilt-navigation-compose = { group = "androidx.hilt", name = "hilt-navigation-compose", version.ref = "androidxHiltNavigationCompose" }
 androidx-appcompat = { group = "androidx.appcompat", name = "appcompat", version.ref = "androidxAppcompat" }
+dagger-hilt-android = { group = "com.google.dagger", name = "hilt-android", version.ref = "daggerHiltAndroid" }
+dagger-hilt-compiler = { group = "com.google.dagger", name = "hilt-compiler", version.ref = "daggerHiltAndroid" }
 junit = { group = "junit", name = "junit", version.ref = "junit" }
 
 [plugins]
-androidApplication = { id = "com.android.application", version.ref = "agp" }
-kotlinAndroid = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
-androidLibrary = { id = "com.android.library", version.ref = "agp" }
+android-application = { id = "com.android.application", version.ref = "agp" }
+kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
+android-library = { id = "com.android.library", version.ref = "agp" }
+dagger-hilt-android = { id = "com.google.dagger.hilt.android", version.ref = "daggerHiltAndroid" }
+ksp = { id = "com.google.devtools.ksp", version.ref = "ksp" }
